@startuml
title HR Staff Activity Log - Class Diagram

' API Layer
class ActivityLogController {
    + GetStaffActivityLogs(staffId, input) : ActivityLogListDto
}

' Application Layer
class ActivityLogAppService {
    + GetStaffActivityLogsAsync(staffId, input) : ActivityLogListDto
}

interface IActivityLogAppService {
    + GetStaffActivityLogsAsync(staffId, input) : ActivityLogListDto
}

' Repositories
interface "IRepository<RecruiterProfile>" as RecruiterRepo {
    + FindAsync(id)
    + GetCurrentUserProfileAsync()
}

interface "IRepository<ActivityLog>" as ActivityRepo {
    + GetQueryableAsync()
    + GetListAsync(predicate)
}

class IdentityUserManager {
    + GetByIdAsync(id)
}

' Domain Models
class ActivityLog {
    + Id : Guid
    + UserId : Guid
    + ActivityType : ActivityType
    + EntityId : Guid
    + EntityType : string
    + Action : string
    + Description : string
    + IpAddress : string
    + UserAgent : string
    + Metadata : string
    + CreationTime : DateTime
}

enum ActivityType {
    JobPosted
    JobUpdated
    JobClosed
    EmailSent
    CandidateEvaluated
    CandidateRejected
    CandidateApproved
    InterviewScheduled
}

class RecruiterProfile {
    + Id : Guid
    + UserId : Guid
    + CompanyId : int
    + IsLead : bool
    + Status : bool
}

class Company {
    + Id : int
    + CompanyName : string
    + Status : bool
}

class IdentityUser {
    + Id : Guid
    + Email : string
    + Name : string
    + Surname : string
}

' DTOs
class ActivityLogListDto {
    + StaffInfo : StaffInfoDto
    + Activities : List<ActivityLogDto>
    + Statistics : ActivityStatistics
    + TotalCount : int
}

class StaffInfoDto {
    + Id : Guid
    + Email : string
    + FullName : string
    + IsLead : bool
}

class ActivityLogDto {
    + Id : Guid
    + ActivityType : ActivityType
    + Action : string
    + Description : string
    + EntityType : string
    + CreationTime : DateTime
    + Metadata : Dictionary<string, object>
}

class ActivityStatistics {
    + TotalActivities : int
    + JobActivities : int
    + EmailActivities : int
    + EvaluationActivities : int
    + TodayActivities : int
    + ThisWeekActivities : int
}

class ActivityLogFilterDto {
    + ActivityType : ActivityType?
    + StartDate : DateTime?
    + EndDate : DateTime?
    + MaxResultCount : int
    + SkipCount : int
    + Sorting : string
}

' Main Relationships
ActivityLogController --> IActivityLogAppService
ActivityLogController ..> ActivityLogListDto : returns

ActivityLogAppService ..|> IActivityLogAppService
ActivityLogAppService --> RecruiterRepo
ActivityLogAppService --> ActivityRepo
ActivityLogAppService --> IdentityUserManager

RecruiterRepo ..> RecruiterProfile
ActivityRepo ..> ActivityLog
IdentityUserManager ..> IdentityUser

ActivityLog --> ActivityType
ActivityLog --> IdentityUser : created by

RecruiterProfile --> Company
RecruiterProfile --> IdentityUser

ActivityLogListDto *-- StaffInfoDto
ActivityLogListDto *-- ActivityLogDto
ActivityLogListDto *-- ActivityStatistics
ActivityLogDto ..> ActivityType

@enduml






